2003-10-03  Alexander V. Lukyanov <lav@yars.free.net>

	* SignalHook.cc: unblock signals upon restoring.
	* Speedometer.cc: (GetETAStrFromTime) support multibyte characters.
	* misc.cc: (squeeze_file_name) support multibyte characters.
	* ftpclass.cc, ftpclass.h, resources.cc: add use_pret and
	  pret_supported flags, ftp:use-pret setting.
	* pgetJob.cc: make more room for status, less for file name.

2003-10-02  Morgan Christiansson <lftp@mog.se>

	* ftpclass.cc: send PRET before PASV command for distributed ftp servers.

2003-08-21  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: (Disconnect) ignore replies when Disconnect is called,
	  call CloseRespQueue for that.
	* FileCopyFtp.cc: fixed fxp for zero sized files.

2003-08-11  Johannes Zellner <johannes@zellner.org>

	* HttpDir.cc:
	  1) implemented the hftp protocol over a CSM proxy
	  2) hftp listings are colored according to DIRECTORY / SYMLINK
	  3) do NOT print hour:minute, if it wasn't specified in the
	     http proxy output

2003-07-15  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h, resource.cc: add ftp:use-telnet-iac setting.

2003-07-10  Alexander V. Lukyanov <lav@yars.free.net>

	* CmdExec.cc: save cwd history before destroying last feeder (this
	  fixes a bug with saving last working directory).

2003-06-26  Alexander V. Lukyanov <lav@yars.free.net>

	* LsCache.cc: (SetDirectory) use SetCwd to restore cwd, this fixes
	  a problem with home values without leading slash.
	* GetJob.cc, GetJob.h: re-do file: handling.

2003-06-21  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopy.cc: optimize FileCopyPeerFDStream speed by writing out
	  data by portions of >=PUT_LL_MIN or by timeout 0.1 second.
	* buffer.cc, buffer.h: add put_ll_timer in IOBufferFDStream too.
	* FileSet.cc: remove unneeded type casting.
	* GetJob.cc: create FileCopyPeerFDStream for file: url scheme.
	  This fixes closing and re-opening output file when transfer